Changes in 0.3.7:

* News entries are now ordered correctly: publication date descending 
* Cancel account works.
* Pending users who are not confirmed yet don't show up in search/browse results.
* A bug that created new project repositories in the wrong path has been fixed.
* Moved the developer "resign" link to the bottom of the project page.
* Users may not cancel their account if they are the sole owner of any projects.
* An "rpath Products" palette has been added.
* The privacy policy and terms of service links have been moved to the bottom of the page.
* The "add <foo> to your project" palette has been disabled if you are not an owner
  of any projects, or if you are viewing your own user account.

Changes in 0.3.6:

* Mailman management scripts are now included.
* Forgotten password functionality fixes.
* Users who change their email address are now required to validate
  the new email before 48 hours; otherwise their account will be locked
  out from every action except to change their email again (in case of
  typoes)
* A way to resign as a developer of a project has been added.
* The 'Site News' display has been improved.