@@ -25,6 +25,7 @@ kid_files = \
 	projects.kid		\
 	projectPage.kid		\
 	register.kid		\
+	register_active.kid	\
 	register_conf.kid	\
 	release.kid		\
 	releases.kid		\
