@@ -1,11 +1,4 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<?python
-messages = { '':          'If you do not have an account, please <a href="register">register</a>.',
-             'confirm':   'Please wait for the confirmation message in your email.',
-             'confirmed': 'Your account has been confirmed. Please log in now.',
-             'invalid':   'Sorry, the username or password is incorrect.' }
-?>
-
 <html xmlns:html="http://www.w3.org/1999/xhtml"
       xmlns:py="http://purl.org/kid/ns#"
       py:extends="'library.kid', 'layout.kid'">
@@ -17,25 +10,19 @@ messages = { '':          'If you do not have an account, please <a href="regist
     <body>
         <td id="main" class="spanleft">
             <div class="pad">
-                <h2>Please log in to use rpath.com:</h2>
-                <p py:if="message" style="font-weight: bold;" py:content="messages[message]"/>
+                <h2>Lost Password:</h2>
                 <form method="post" action="processLogin">
                     <p class="help">
-                        If you have forgotten your password, please enter only
+                        If you have forgotten your password, please enter
                         your username in the field below, and click Forgot Password.
                     </p>
-                    <table>
+                    <table style="width: 50%; margin-bottom: 1em;">
                         <tr>
                             <td><b>Username:</b></td>
                             <td><input type="text" name="username" /></td>
                         </tr>
-                        <tr>
-                            <td><b>Password:</b></td>
-                            <td><input type="password" name="password" /></td>
-                        </tr>
                     </table>
                     <p>
-                        <button type="submit" name="submit" value="Log In">Log In</button>&#160;
                         <button type="submit" name="submit" value="Forgot Password">Forgot Password</button>
                     </p>
                 </form>
