@@ -11,9 +11,9 @@
     <body>
         <td id="main" class="spanleft">
             <div class="pad">
-                <h2>Thank you for registering</h2>
-		<p>An email confirming your request has been sent to <b>${email}</b>.</p>
-		<p>Please follow the directions in your confirmation email to complete the registration process.</p>
+                <h2>Thank you for confirming</h2>
+		<p>Your account has now been confirmed.</p>
+                <p>Please log in above.</p>
             </div>
         </td>
     </body>
